# lead-disposition

./: .env.example  .gitignore  Dockerfile  Dockerfile.bridge-worker  README.md  disposition.db-shm  disposition.db-wal  docker-compose.yml  pyproject.toml
migrations/: 001_disposition_schema.sql  002_lead_pull_jobs.sql
src/lead_disposition/: __init__.py  campaign_fill.py  deconfliction.py  importer.py  state_machine.py  tam_tracker.py
src/lead_disposition/bridge/: __init__.py  charm_mapper.py  charm_worker.py
src/lead_disposition/core/: __init__.py  config.py  database.py  database_pg.py  db_factory.py  models.py
src/lead_disposition/flows/: __init__.py  maintenance.py
src/lead_disposition/providers/: __init__.py  ai_ark.py  base.py  clay.py  jina.py  spider.py
src/lead_disposition/scripts/: init_db.py  snapshot.py
src/lead_disposition/templates/: base.html  campaign_fill.html  contact_detail.html  contacts.html  dashboard.html  import.html  ownership.html
src/lead_disposition/waterfall/: __init__.py  engine.py  writeback.py
src/lead_disposition/web/: app.py  serve.py
tests/: conftest.py  test_deconfliction.py  test_importer.py  test_models.py  test_state_machine.py  test_tam.py
